--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
-    <script src="script.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
